fix popup display issues on mobile

--- a/style.css
+++ b/style.css
@@ -214,8 +214,7 @@ img.pictures {
   background: #FFF;
   position: relative;
   margin-top: 100px;
-  width: 98%;
-  max-width: 700px;
+  width: 700px;
   border-radius: 5px;
 }
 .popup .close {
@@ -264,12 +263,10 @@ img.pictures {
 @media screen and (max-width:799px) {
   .popup {
     margin-top: 0px;
-  }
-  .popup h1 {
-    font-size: px;
+    width: 90%;
   }
   .popup img {
-    width: 80%;
+    width: 85%;
   }
   .popup .close {
     font-size: 37px;
